--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,12 @@ aiohttp==3.8.5
 aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==23.1.0
+azure-core==1.29.4
+azure-cosmos==4.5.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
 discord.py==2.3.2
+dnspython==2.4.2
 docopt==0.6.2
 frozenlist==1.4.0
 greenlet==2.0.2
@@ -12,12 +15,10 @@ idna==3.4
 iso8601==2.0.0
 multidict==6.0.4
 pipreqs==0.4.13
-psycopg==3.1.10
 python-dateutil==2.8.2
 pytz==2023.3
 requests==2.31.0
 six==1.16.0
-SQLAlchemy==2.0.20
 twitchAPI==3.11.0
 typing_extensions==4.7.1
 urllib3==2.0.4
