--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
-aiohttp==3.8.5
+aiohttp==3.8.6
 aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==23.1.0
 azure-core==1.29.4
 azure-cosmos==4.5.1
 certifi==2023.7.22
-charset-normalizer==3.2.0
+charset-normalizer==3.3.0
 discord.py==2.3.2
 dnspython==2.4.2
 docopt==0.6.2
 frozenlist==1.4.0
-greenlet==2.0.2
+greenlet==3.0.0
 idna==3.4
-iso8601==2.0.0
+iso8601==2.1.0
 multidict==6.0.4
 pipreqs==0.4.13
 python-dateutil==2.8.2
-pytz==2023.3
+pytz==2023.3.post1
 requests==2.31.0
 six==1.16.0
 twitchAPI==4.0.1
-typing_extensions==4.7.1
-urllib3==2.0.4
+typing_extensions==4.8.0
+urllib3==2.0.7
 yarg==0.1.9
 yarl==1.9.2
