--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 aiohttp==3.8.6
 aiosignal==1.3.1
 annotated-types==0.6.0
-anyio==3.7.1
+anyio==4.0.0
 async-timeout==4.0.3
 attrs==23.1.0
-azure-core==1.29.5
-azure-cosmos==4.5.2b2
 certifi==2023.7.22
 charset-normalizer==3.3.2
 discord.py==2.3.2
@@ -20,15 +18,17 @@ httpx==0.25.1
 idna==3.4
 iso8601==2.1.0
 multidict==6.0.4
-openai==1.0.0rc1
+openai==1.1.1
 pipreqs==0.4.13
 pydantic==2.4.2
-pydantic_core==2.10.1
+pydantic_core==2.13.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
+rfc3986==2.0.0
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==2.0.23
 tqdm==4.66.1
 twitchAPI==4.0.1
 typing_extensions==4.8.0
