--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 aiohttp==3.9.1
-azure-cosmos==4.5.1
-azure-core==1.29.6
 discord.py==2.3.2
 openai==1.6.1
 pytz==2023.3.post1
 twitchAPI==4.1.0
 motor==3.3.2
+python-telegram-bot==20.7
